src/css/theme.scss
.button {
    text-decoration: none;
    box-sizing: border-box;
    width: 32px;
    height: 32px;
    display: inline-block;
    text-align: center;
    vertical-align: middle;
    overflow: hidden;
    font-size: 30px;
    position: relative;
}

.button-stretch img,
.button-stretch .button-icon {
    margin: 0 !important;
    width: 100% !important;
    height: 100% !important;
    font-size: 100% !important;
}

.button .fa-stack {
    text-align: center;
    width: 20px;
    height: 20px;
    font-size: 20px;
    vertical-align: top;
}

.button .fa-stack .fa-stack-1x {
    font-size: 0.5em;
    margin-top: -3px;
}

.button .overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    /*opacity: 0;*/
    display: none;
    /*transition: .5s ease;*/
}

.button:hover .overlay {
    /*opacity: 1;*/
    display: block;
}

.button .fa,
.button-icon {
    margin-top: 6px;
    text-align: center;
    width: 20px;
    height: 20px;
    font-size: 20px;
    vertical-align: top;
}

.button img,
.button-icon {
    display: block;
    margin-top: 6px;
    margin-left: 6px;
    width: 20px;
    height: 20px;
    font-size: 20px;
}

.button svg {
    top: -3px;
    position: relative;
}

.button-sm .fa,
.button-sm.on .fa {
    margin-top: 1px;
    margin-left: 0;
    width: 16px;
    height: 16px;
    font-size: 14px;
}

.button-sm,
.button-sm.on {
    width: 18px;
    height: 18px;
    font-size: 16px;
}

.button-sm img,
.button-sm.on img {
    height: 16px;
    width: 16px;
    margin: 1px;
}

.button-sm svg,
.button-sm.on svg {
    top: 0px;
    position: relative;
}

.scroll-track {
    width: 12px;
    height: 12px;
    background-color: Scrollbar;
    box-sizing: border-box;
    z-index: 1001;
    cursor: default;
}

.scroll-thumb {
    background-color: ButtonFace;
    box-sizing: border-box;
    border-top: 1px solid ButtonHighlight;
    border-left: 1px solid ButtonHighlight;
    border-right: 1px solid ButtonShadow;
    border-bottom: 1px solid ButtonShadow;
    z-index: 2000;
    cursor: default;
}

.scroll-thumb:hover {
    background-color: ActiveBorder;
}

.scroll-thumb:active {
    background-color: ThreeDDarkShadow;
}

.scroll-corner {
    position: absolute;
    right: 0;
    bottom: 0;
    box-sizing: border-box;
    width: 12px;
    height: 12px;
    background-color: Scrollbar;
    z-index: 1000;
    cursor: default;
}

.scroll-split-button {
    font-size: 9px;
    text-align: center;
    background-color: ButtonFace !important;
    color: ButtonText;
    box-sizing: border-box;
    border-top: 1px solid ButtonHighlight;
    border-left: 1px solid ButtonHighlight;
    border-right: 1px solid ButtonShadow;
    border-bottom: 1px solid ButtonShadow;
    z-index: 2000;
    cursor: default;
}

.scroll-split-button.active:active {
    font-size: 9px;
    text-align: center;
    background-color: ButtonFace !important;
    color: ButtonText;
    box-sizing: border-box;
    border-top: 1px solid ButtonShadow;
    border-left: 1px solid ButtonShadow;
    border-right: 1px solid ButtonHighlight;
    border-bottom: 1px solid ButtonHighlight;
    z-index: 2000;
    cursor: default;
}

.scroll-split-button.disabled {
    color: GrayText;
    cursor: default;
}

.scroll-split-button.active {
    background-color: ThreeDShadow !important;
    color: ButtonText;
    border-top: 1px solid ButtonShadow;
    border-left: 1px solid ButtonShadow;
    border-right: 1px solid ButtonHighlight;
    border-bottom: 1px solid ButtonHighlight;
}

.scroll-split-button i {
    top: 1px;
    position: relative;
}

.scroll-horizontal {
    border-top: 1px solid ButtonHighlight;
    cursor: default;
}

.scroll-vertical {
    border-left: 1px solid ButtonHighlight;
    cursor: default;
}

.scroll-disabled .scroll-thumb,
.scroll-disabled .scroll-thumb:hover,
.scroll-disabled .scroll-thumb:active {
    background-color: ThreeDLightShadow;
    cursor: default;
}

button:focus,
button:active:focus,
button.active:focus,
button.focus,
button:active.focus,
button.active.focus {
    outline: none !important;
}

#history-dropup {
    width: 32px
}

/** Grip button */
.drag-grip {
    display: inline-block;
    background: white;
    color: black;
    width: 32px;
    height: 16px;
    border: 1px black solid;
    -webkit-app-region: drag;
    overflow: hidden;
    position: relative;
    text-decoration: none;
    box-sizing: border-box;
}

.drag-grip[style*='display: none'] ~ #bb-scroll-up,
.drag-grip[style*='display: none'] ~ #buttonbar {
    top: 0;
}

.drag-grip svg {
    width: 32px; 
    height: 16px;
    fill: currentColor;
    overflow: hidden;
    top: -11px;
}

#loader {
    position: absolute;
    top: 0px;
    left: 0px;
    bottom: 0px;
    right: 0px;
    z-index: 10000;
    color: wheat;
    background-color: black;
}

#loader .text {
    width:100%;
    text-align:center;
    font-size:3em;
    top: 50%;
    position: absolute;
    transform: translateY(-50%);
}

.loader {
    border: 16px solid #790000;
    /* Light grey */
    border-top: 16px solid #d70000;
    /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
    margin-left: calc(50% - 60px);
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

